# Winnow64

./: .env.ignorefornow  .geminiignore.txt  .gitignore  .qmake.winrt_uuid_Winnow  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CallOrder.txt  Deploy.txt  Dialogs:zoomdlg.h  Dialogs:zoomdlg_.cpp  Errors  Gemini.md  HelpDocCreation.txt  Makefile.Debug  Makefile.Release  Notes  Notes.txt  Notes.txt.autosave  README.md  Sand3_1  Scratch.txt  Scratch1.txt  Shortcuts.txt  ToDo.txt  ToDo.txt.autosave  Tokens.txt  Winnow64 - Shortcut.lnk  Winnow_resource.rc  Winnow_resource.rc.in  _CMakeLists.txt  _ToDo.txt  _ToDo.txt.autosave  appdlg.ui  bookmarks.cpp  bookmarks.h  bookmarkshelp.html  circlelabel.cpp  circlelabel.h  commit.sh  (+144 more)
.claude/: settings.json  settings.local.json  statusline.jq
Cache/: cacheadapt.h  cachedata.cpp  cachedata.h  framedecoder.cpp  framedecoder.h  framedecoder_mac.mm  iconcache.cpp  iconcache.h  imagecache - Copy.h  imagecache.cpp  imagecache.h  imagecache2.cpp  imagecache2.h  imagedecoder.cpp  imagedecoder.h  mdcache.cpp  mdcache.cpp.autosave  mdcache.h  mdcachemgr.cpp  mdcachemgr.h  mdcacher.cpp  mdcacher.h  metaread.cpp  metaread.h  metaread2.cpp  metaread2.h  metaread2_.cpp  metaread2_.h  metaread3.cpp  metaread3.h  metareader.cpp  metareader.h  metareadlinear.cpp  metareadlinear.h  reader.cpp  reader.h  reader3.cpp  reader3.h  threadsafehash.h  tiffthumbdecoder.cpp  (+6 more)
Containers/: concurrentlist.cpp  concurrentlist.h
Datamodel/: HashMap.h  HashNode.h  buildfilters.cpp  buildfilters.h  datamodel.cpp  datamodel.h  filters.cpp  filters.h  imagelist.cpp  imagelist.h  selection.cpp  selection.h
Develop/: brushstamp.h  colorgrade.h  depthmask.h  develop.cpp  develop.h  editparams.h  editstack.h  fillspot.h  inputtransform.cpp  inputtransform.h  objectmask.h  outputtransform.cpp  outputtransform.h  rangemask.h  skymask.h  subjectmask.h  whitebalance.cpp  whitebalance.h  workingimage.h  workingimagecache.cpp  workingimagecache.h
Dialogs/: aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  addthumbnailsdlg.cpp  addthumbnailsdlg.h  addthumbnailsdlg.ui  aligndlg.ui  appdlg.cpp  appdlg.h  appdlg.ui  copypickdlg.cpp  copypickdlg.h  copypickdlg.ui  copystyledlg.cpp  copystyledlg.h  copystyledlg.ui  deleteusbdlg.cpp  deleteusbdlg.h  deleteusbdlg.ui  dialogs.cpp  dialogs.h  editlistdlg.cpp  editlistdlg.h  editlistdlg.ui  erasememcardimagesdlg.cpp  erasememcardimagesdlg.h  erasememcardimagesdlg.ui  findduplicatesdlg.cpp  findduplicatesdlg.h  findduplicatesdlg.ui  imagedlg.cpp  imagedlg.h  imagedlg.ui  ingestdlg - Copy.ui  ingestdlg.cpp  ingestdlg.h  ingestdlg.ui  ingestdlgold.cpp  ingestdlgold.h  ingesterrors.cpp  (+65 more)
Docs/: Border shapes.xlsx  QPixmap performance.xlsx  Winnow help copy.html  Winnow help.html  _template.html  bookmarkshelp.html  develophelp.html  embelcoordsystem.html  filtershelp.html  findduplicateshelp.html  focusstackingtipshelp.html  foldershelp.html  help.css  helpfilmstrip.html  ingest.htm  ingestautopath.html  ingesthelp.htm  ingesthelp.rtf  metadatahelp.html  performancetipshelp.html  pixeldeltahelp.html  versions.html  winnow.html  winnowhelp.html  ~$ingest.htm  ~$ltershelp.html  ~WRL1335.tmp
Effects/: REF_imageblitz_effects.h  blur.cpp  blur.h  effect.h  effects.cpp  effects.h  graphicaleffects.cpp  graphicaleffects.h  graphicseffect.cpp  graphicseffect.h  graphicsitemeventfilter.cpp  graphicsitemeventfilter.h  highlighteffect.cpp  highlighteffect.h  interpolate.h  openglframe.cpp  openglframe.h  shadowtest.cpp  shadowtest.h
Embellish/: embel.cpp  embel.h  embelCoord.ui  embelexport.cpp  embelexport.h  embelview.cpp  embelview.h
File/: bookmarks.cpp  bookmarks.h  fstree.cpp  fstree.h  hoverdelegate.cpp  hoverdelegate.h  ingest.cpp  ingest.h
FocusStack/: 3dpreview.h  FSFusionWaveletTemplates.h  background_removal.h  depthmap.h  depthmap_inpaint.h  focusmeasure.cpp  focusstack.h  focusstackworker.cpp  focusstackworker.h  fs.cpp  fs.h  fsalign.cpp  fsalign.h  fsalign_types.h  fsartifact.cpp  fsartifact.h  fsbackground.cpp  fsbackground.h  fsdepth.cpp  fsdepth.h  fsfocus.cpp  fsfocus.h  fsfusion copy.h  fsfusion.cpp  fsfusion.h  fsfusiondmap.cpp  fsfusiondmap.h  fsfusiondmapbasic.cpp  fsfusiondmapbasic.h  fsfusiondmapshared.cpp  fsfusiondmapshared.h  fsfusionmerge.cpp  fsfusionmerge.h  fsfusionpmax.cpp  fsfusionpmax.h  fsfusionreassign.cpp  fsfusionreassign.h  fsfusionwavelet.cpp  fsfusionwavelet.h  fsgray.cpp  (+23 more)
Help/: filtershelp.ui  filtershelp_copy.ui  foldershelp.ui  helpfindduplicates.ui  helpform.ui  helpingest.ui  helppixeldelta.cpp  helppixeldelta.h  helppixeldelta.ui  ingestautopath.ui  message.ui  shortcutsform.ui  testrichtext.ui  welcome.ui
Image/: autonomousimage.cpp  autonomousimage.h  cacheimage.cpp  cacheimage.h  colorprofile.cpp  colorprofile.h  colorprofile_p.h  imagealign.cpp  pixmap.cpp  pixmap.h  stack.cpp  stack.h  subject.cpp  subject.h  thumb.cpp  thumb.h  thumb_mac.mm  tiffhandler.cpp  tiffhandler.h  videoframe.cpp  videoframe.h
ImageFormats/: heic.cpp  heic.h
ImageStack/: FocusStackConstants.h  depthmap.cpp  depthmap.h  focushalo.cpp  focushalo.h  focusmeasure.cpp  focusmeasure.h  focusstackutilities.cpp  focusstackutilities.h  focuswavelet.cpp  focuswavelet.h  stack_depth_map.cpp  stack_depth_map.h  stack_focus_measure.cpp  stack_focus_measure.h  stackaligner.cpp  stackaligner.h  stackcontroller.cpp  stackcontroller.h  stackdepthmap.cpp  stackfocusmeasure.cpp  stackfusion.cpp  stackfusion.h
Lcms2/: lcms2.def  lcms2.h
Log/: issue.cpp  issue.h  log.cpp  log.h
MacOS/: macScale_p.h  macscale.h  macscale.mm
Main/: diagnostics.cpp  docktitlebar.h  dockwidget.cpp  dockwidget.h  draganddrop.cpp  externalapp.cpp  fileoperations.cpp  global.cpp  global.h  help.cpp  initialize.cpp  log.cpp  logger.cpp  (+34 more)
tests/: CMakeLists.txt  README.md
tests/fixtures/: generate_fixtures.py
tests/fixtures/images/: sample02.tif
tests/soak/: run_soak.sh
tests/tsan/: run_tsan.sh  run_tsan_proxy.sh
tests/unit/: tst_byteops.cpp  tst_colorgrade.cpp  tst_exiftags.cpp  tst_ifd.cpp  tst_pathutils.cpp  tst_rational.cpp  tst_whitebalance.cpp
(+688 files in other folders)
